fixed white space issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html,
 body {
   margin: 0;
+  padding: 0;
 }
 
 .app {
@@ -12,7 +13,8 @@ body {
 /* nav bar */
 
 .logoImg {
-  padding-left: 20px;
+  margin-left: 20px;
+  margin-right: -20px;
   height: 50px;
   object-fit: cover;
 }
@@ -175,8 +177,8 @@ body {
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  height: 24px;
-  width: 24px;
+  height: 25px;
+  width: 25px;
 }
 
 /* Color/shape of close button cross */
@@ -229,13 +231,10 @@ body {
   .sideNav {
     display: none;
   }
-  .addressDiv {
-    font-size: 12px;
-  }
-  .resources {
-    font-size: 10px;
-  }
-  .footLink {
-    font-size: 14px;
+}
+@media screen and (max-width: 650px) {
+  .logoImg {
+    margin-top: 8px;
+    height: 40px;
   }
 }
